<resources>
    <string name="app_name">LuchParser</string>

    <string name="modem_id">№%s</string>
    <string name="modem_payload_power">Напряжение:\n%s В</string>
    <string name="modem_payload_distance">Расстояние:\n%s мм</string>
    <string name="modem_payload_temperature">Температура:\n%s \u00B0C</string>
    <string name="modem_time">Время: %s</string>

    <string name="common_back">Назад</string>
    <string name="root_hint_enter">Введите номер</string>
    <string name="root_button_enter">Ввод</string>
    <string name="root_message_empty">Ничего не найдено</string>
    <string name="root_error_number">Некорректный номер</string>

    <string name="result_tables">Таблица</string>
    <string name="result_charters">Графики</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>